--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "better-sqlite3": "^7.4.3",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0"
   },
