- Partials support for old messages, reaction removing/add on old/uncached messages can now be tracked. - Added catch for unicode/default emojis so only custom emojis get added to a server's db. - Added Yearly, Daily, and Hourly daterange options to `displaystats`, `getcount`, and `leaderboard` - Date object format changed from `YYYY-MM-DD` to `YYYY-MM-DDTHH:mm:ss.sssZ`, Databases now store ISO date format and queries query with said format.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy_commands": "node deploy-commands.js"
   },
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
