--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "deploy_commands": "node deploy-commands.js"
+    "deploy_commands": "node deploy-commands.js",
+    "server": "pm2 start index.js"
   },
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "better-sqlite3": "^7.4.3",
     "discord-api-types": "^0.22.0",
-    "discord.js": "^13.1.0"
+    "discord.js": "^13.1.0",
+    "pm2": "^5.1.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
