--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "deploy": "node src/helpers/deployCommands.js",
-    "server": "pm2 start src/index.js"
+    "server": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
