--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "axios": "^0.24.0",
     "better-sqlite3": "^7.4.3",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.2.0",
