--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ms": "^2.1.3",
     "pm2": "^5.1.2",
     "request": "^2.88.2",
+    "string-similarity": "^4.0.4",
     "tinify": "^1.6.1"
   },
   "devDependencies": {
