--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "better-sqlite3": "^7.4.3",
     "discord-api-types": "^0.22.0",
+    "discord-emoji-converter": "^1.2.3",
     "discord.js": "^13.2.0",
     "ms": "^2.1.3",
     "pm2": "^5.1.2",
