--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord-api-types": "^0.22.0",
     "discord-emoji-converter": "^1.2.3",
     "discord.js": "^13.2.0",
+    "image-type": "^4.1.0",
     "ms": "^2.1.3",
     "pm2": "^5.1.2",
     "request": "^2.88.2",
