--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "server": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.6.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
     "archiver": "^5.3.0",
-    "axios": "^0.24.0",
-    "better-sqlite3": "^7.4.3",
-    "discord-api-types": "^0.22.0",
+    "axios": "^0.25.0",
+    "better-sqlite3": "^7.5.0",
+    "discord-api-types": "^0.26.1",
     "discord-emoji-converter": "^1.2.3",
-    "discord.js": "^13.2.0",
+    "discord.js": "^13.6.0",
     "image-type": "^4.1.0",
     "ms": "^2.1.3",
     "pm2": "^5.1.2",
@@ -25,7 +25,7 @@
     "tinify": "^1.6.1"
   },
   "devDependencies": {
-    "eslint": "^7.32.0"
+    "eslint": "^8.8.0"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
