--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "discord.js": "^13.6.0",
     "image-type": "^4.1.0",
     "ms": "^2.1.3",
+    "npm-check-updates": "^12.5.4",
     "pm2": "^5.1.2",
     "request": "^2.88.2",
     "string-similarity": "^4.0.4",
