--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "emojiutilities",
   "description": "Discord.js Bot for tracking server-specific emoji usage",
-  "version": "1.0.0",
+  "version": "1.11.0",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "deploy": "node src/helpers/deployCommands.js",
-    "server": "pm2 start ecosystem.config.js"
+    "server": "pm2 start ecosystem.config.js",
+    "release": "standard-version",
+    "postrelease": "git push --follow-tags origin master"
   },
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
@@ -23,10 +25,17 @@
     "pm2": "^5.1.2",
     "request": "^2.88.2",
     "string-similarity": "^4.0.4",
-    "tinify": "^1.6.1"
+    "tinify": "^1.6.1",
+    "replace": "^1.2.1",
+    "standard-version": "^9.3.2"
   },
   "devDependencies": {
     "eslint": "^8.8.0"
+  },
+  "standard-version": {
+    "scripts": {
+      "postchangelog": "replace '### \\[' '## [' CHANGELOG.md"
+    }
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
