--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "ms": "^2.1.3",
     "npm-check-updates": "^12.5.4",
     "pm2": "^5.1.2",
-    "request": "^2.88.2",
-    "string-similarity": "^4.0.4",
-    "tinify": "^1.6.1",
     "replace": "^1.2.1",
-    "standard-version": "^9.3.2"
+    "request": "^2.88.2",
+    "sharp": "^0.30.3",
+    "standard-version": "^9.3.2",
+    "string-similarity": "^4.0.4",
+    "tinify": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "^8.8.0"
