--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "request": "^2.88.2",
     "sharp": "^0.30.3",
     "standard-version": "^9.3.2",
-    "string-similarity": "^4.0.4",
-    "tinify": "^1.6.1"
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "eslint": "^8.8.0"
