--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
     "postrelease": "git push --follow-tags origin master"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.12.0",
-    "@discordjs/rest": "^0.3.0",
-    "archiver": "^5.3.0",
-    "axios": "^0.26.1",
-    "better-sqlite3": "^7.5.1",
-    "discord-api-types": "^0.31.1",
-    "discord-emoji-converter": "^1.2.5",
-    "discord.js": "^13.6.0",
+    "@discordjs/builders": "^0.13.0",
+    "@discordjs/rest": "^0.4.1",
+    "archiver": "^5.3.1",
+    "axios": "^0.27.2",
+    "better-sqlite3": "^7.5.3",
+    "better-sqlite3-multiple-ciphers": "^7.5.2",
+    "discord-api-types": "^0.33.0",
+    "discord-emoji-converter": "^1.2.6",
+    "discord.js": "^13.7.0",
     "image-type": "^4.1.0",
     "ms": "^2.1.3",
-    "npm-check-updates": "^12.5.8",
+    "npm-check-updates": "^13.0.3",
     "pm2": "^5.2.0",
     "replace": "^1.2.1",
     "request": "^2.88.2",
-    "sharp": "^0.30.3",
-    "standard-version": "^9.3.2",
+    "sharp": "^0.30.5",
+    "standard-version": "^9.5.0",
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
-    "eslint": "^8.13.0"
+    "eslint": "^8.16.0"
   },
   "standard-version": {
     "scripts": {
