--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord-emoji-converter": "^1.2.6",
     "discord.js": "^13.7.0",
     "image-type": "^4.1.0",
+    "is-animated": "^2.0.2",
     "ms": "^2.1.3",
     "npm-check-updates": "^13.0.3",
     "pm2": "^5.2.0",
