--- a/package.json
+++ b/package.json
@@ -6,20 +6,17 @@
   "scripts": {
     "start": "node src/index.js",
     "deploy": "node src/helpers/deployCommands.js",
-    "start-server": "pm2 start ecosystem.config.js",
-    "release": "standard-version",
-    "postrelease": "git push --follow-tags origin master"
+    "startServer": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.15.0",
-    "@discordjs/rest": "^0.5.0",
+    "@discordjs/rest": "^1.1.0",
     "archiver": "^5.3.1",
     "axios": "^0.27.2",
-    "better-sqlite3": "^7.5.3",
-    "better-sqlite3-multiple-ciphers": "^7.5.2",
-    "discord-api-types": "^0.36.0",
+    "better-sqlite3": "^7.6.2",
+    "better-sqlite3-multiple-ciphers": "^7.6.2",
+    "discord-api-types": "^0.37.5",
     "discord-emoji-converter": "^1.2.6",
-    "discord.js": "^13.8.1",
+    "discord.js": "^14.3.0",
     "image-type": "^4.1.0",
     "is-animated": "^2.0.2",
     "ms": "^2.1.3",
@@ -27,7 +24,7 @@
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
-    "eslint": "^8.18.0",
+    "eslint": "^8.22.0",
     "npm-check-updates": "^16.0.5",
     "pm2": "^5.2.0"
   },
