--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@discordjs/rest": "^1.4.0",
     "archiver": "^5.3.1",
-    "axios": "^1.2.0",
+    "axios": "^1.2.0-alpha.1",
     "better-sqlite3": "^8.0.1",
     "better-sqlite3-multiple-ciphers": "^8.0.1",
     "discord-api-types": "^0.37.20",
