--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "deploy": "node src/helpers/deployCommands.js",
-    "startServer": "pm2 start ecosystem.config.js"
+    "startServer": "pm2 start ecosystem.config.cjs"
   },
   "dependencies": {
     "@discordjs/rest": "^1.4.0",
