--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "startServer": "pm2 start ecosystem.config.cjs"
   },
   "dependencies": {
-    "@discordjs/rest": "^1.4.0",
+    "@discordjs/rest": "^1.5.0",
     "archiver": "^5.3.1",
-    "axios": "^1.2.0-alpha.1",
+    "axios": "^1.2.2",
     "better-sqlite3": "^8.0.1",
     "better-sqlite3-multiple-ciphers": "^8.0.1",
-    "discord-api-types": "^0.37.20",
+    "discord-api-types": "^0.37.25",
     "discord-emoji-converter": "^1.2.8",
     "discord.js": "^14.7.1",
     "image-type": "^5.1.0",
     "is-animated": "^2.0.2",
     "ms": "^2.1.3",
-    "sharp": "^0.31.2",
+    "sharp": "^0.31.3",
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
-    "eslint": "^8.29.0",
-    "npm-check-updates": "^16.4.3",
+    "eslint": "^8.30.0",
+    "npm-check-updates": "^16.6.2",
     "pm2": "^5.2.2"
   },
   "eslintConfig": {
