--- a/package.json
+++ b/package.json
@@ -10,146 +10,25 @@
     "startServer": "pm2 start ecosystem.config.cjs"
   },
   "dependencies": {
-    "@discordjs/rest": "^1.5.0",
+    "@discordjs/rest": "^1.7.0",
     "archiver": "^5.3.1",
-    "axios": "^1.2.2",
-    "better-sqlite3": "^8.0.1",
-    "better-sqlite3-multiple-ciphers": "^8.0.1",
-    "discord-api-types": "^0.37.25",
+    "axios": "^1.3.6",
+    "better-sqlite3": "^8.3.0",
+    "better-sqlite3-multiple-ciphers": "^8.3.0",
+    "discord-api-types": "^0.37.40",
     "discord-emoji-converter": "^1.2.8",
-    "discord.js": "^14.7.1",
-    "image-type": "^5.1.0",
+    "discord.js": "^14.9.0",
+    "dotenv": "^16.0.3",
+    "image-type": "^5.2.0",
     "is-animated": "^2.0.2",
+    "mongodb": "^5.3.0",
     "ms": "^2.1.3",
-    "sharp": "^0.31.3",
+    "sharp": "^0.32.0",
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
-    "eslint": "^8.30.0",
-    "npm-check-updates": "^16.6.2",
-    "pm2": "^5.2.2"
-  },
-  "eslintConfig": {
-    "extends": "eslint:recommended",
-    "env": {
-      "node": true,
-      "es6": true
-    },
-    "parserOptions": {
-      "sourceType": "module",
-      "ecmaVersion": 2021
-    },
-    "rules": {
-      "arrow-spacing": [
-        "warn",
-        {
-          "before": true,
-          "after": true
-        }
-      ],
-      "brace-style": [
-        "error",
-        "stroustrup",
-        {
-          "allowSingleLine": true
-        }
-      ],
-      "comma-dangle": [
-        "error",
-        "always-multiline"
-      ],
-      "comma-spacing": "error",
-      "comma-style": "error",
-      "curly": [
-        "error",
-        "multi-line",
-        "consistent"
-      ],
-      "dot-location": [
-        "error",
-        "property"
-      ],
-      "handle-callback-err": "off",
-      "indent": [
-        "error",
-        "tab"
-      ],
-      "keyword-spacing": "error",
-      "max-nested-callbacks": [
-        "error",
-        {
-          "max": 4
-        }
-      ],
-      "max-statements-per-line": [
-        "error",
-        {
-          "max": 2
-        }
-      ],
-      "no-console": "off",
-      "no-empty-function": "error",
-      "no-floating-decimal": "error",
-      "no-lonely-if": "error",
-      "no-multi-spaces": "error",
-      "no-multiple-empty-lines": [
-        "error",
-        {
-          "max": 2,
-          "maxEOF": 1,
-          "maxBOF": 0
-        }
-      ],
-      "no-shadow": [
-        "error",
-        {
-          "allow": [
-            "err",
-            "resolve",
-            "reject"
-          ]
-        }
-      ],
-      "no-trailing-spaces": [
-        "error"
-      ],
-      "no-var": "error",
-      "no-unused-vars": [
-        "error",
-        {
-          "caughtErrors": "all",
-          "caughtErrorsIgnorePattern": "^ignore|^e$",
-          "varsIgnorePattern": "^ignore|^e$",
-          "argsIgnorePattern": "^ignore|^e$"
-        }
-      ],
-      "object-curly-spacing": [
-        "error",
-        "always"
-      ],
-      "prefer-const": "error",
-      "quotes": [
-        "error",
-        "single"
-      ],
-      "semi": [
-        "error",
-        "always"
-      ],
-      "space-before-blocks": "error",
-      "space-before-function-paren": [
-        "error",
-        {
-          "anonymous": "never",
-          "named": "never",
-          "asyncArrow": "always"
-        }
-      ],
-      "space-in-parens": "error",
-      "space-infix-ops": "error",
-      "space-unary-ops": "error",
-      "spaced-comment": "error",
-      "yoda": "error"
-    }
+    "eslint": "^8.39.0",
+    "npm-check-updates": "^16.10.9",
+    "pm2": "^5.3.0"
   }
 }
