--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "deploy": "node src/helpers/deployCommands.js",
-    "startServer": "pm2 start ecosystem.config.cjs"
+    "deploy": "node src/helpers/deployCommands.js"
   },
   "dependencies": {
-    "@discordjs/rest": "^1.7.0",
     "archiver": "^5.3.1",
     "axios": "^1.3.6",
-    "better-sqlite3": "^8.3.0",
-    "better-sqlite3-multiple-ciphers": "^8.3.0",
-    "discord-api-types": "^0.37.40",
+    "common-tags": "^1.8.2",
     "discord-emoji-converter": "^1.2.8",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
@@ -29,6 +25,7 @@
   "devDependencies": {
     "eslint": "^8.39.0",
     "npm-check-updates": "^16.10.9",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "prettier": "^2.8.8"
   }
 }
