--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "deploy": "node src/helpers/deployCommands.js"
   },
   "dependencies": {
+    "@beenotung/gif-to-apng": "^0.2.1",
     "archiver": "^5.3.1",
     "axios": "^1.3.6",
     "common-tags": "^1.8.2",
     "discord-emoji-converter": "^1.2.8",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
+    "gif-to-apng": "^0.1.2",
     "image-type": "^5.2.0",
     "is-animated": "^2.0.2",
     "mongodb": "^5.3.0",
